add all paper from https://liufeng2915.github.io/publications

--- a/styles.css
+++ b/styles.css
@@ -365,6 +365,11 @@ body {
     text-decoration: underline;
 }
 
+.links .link-placeholder {
+    color: #aaa;
+    font-size: 13px;
+}
+
 /* Projects Section */
 .project-grid {
     display: grid;
